m/k/k3d-dfd-vc1-emojivoto/resource-ingress-emojivoto-tailscale.yaml
#ManagedBy: cue

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto-tailscale
  annotations:
    external-dns.alpha.kubernetes.io/hostname: emojivoto-ts-vc1.dev.amanibhavam.defn.run
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: emojivoto-ts-vc1.dev.amanibhavam.defn.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
